# Chess

./: CMakeLists.txt  LICENSE  README.md
include/chess/: attacks.hpp  bitboard.hpp  cli.hpp  fen.hpp  make_undo.hpp  move.hpp  movegen.hpp  position.hpp  repetition.hpp  status.hpp  types.hpp  zobrist.hpp
src/: attacks.cpp  bitboard.cpp  cli.cpp  fen.cpp  gui_main.cpp  main.cpp  make_undo.cpp  movegen.cpp  position.cpp  repetition.cpp  status.cpp  zobrist.cpp
tests/: CMakeLists.txt  attacks_knight_king.cpp  en_passant.cpp  fen_roundtrip.cpp  make_undo_roundtrip.cpp  move_counts.cpp  perft_divide.cpp  perft_positions.cpp  status_checkmate.cpp  status_draws.cpp
